--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>lipeilin - poems</title>
 </head>
-<body onload="parent.location='https://jinjieup-my.sharepoint.com/personal/lipeilin_jinjieup_onmicrosoft_com1/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Flipeilin%5Fjinjieup%5Fonmicrosoft%5Fcom1%2FDocuments%2F%E4%B8%AA%E4%BA%BA%E8%B5%84%E6%96%99%2F%E4%BD%9C%E6%96%87%E9%9B%86&originalPath=aHR0cHM6Ly9qaW5qaWV1cC1teS5zaGFyZXBvaW50LmNvbS86ZjovZy9wZXJzb25hbC9saXBlaWxpbl9qaW5qaWV1cF9vbm1pY3Jvc29mdF9jb20xL0Vxc3dPbHJpTmZaTHVqUGlpVG01NTZFQkJrQ3gtV3FzbndYY0l0eXlXTWtWYVE%5FcnRpbWU9SHNpQkRsUnMyVWc'">
+<body onload="parent.location='https://jinjieup-my.sharepoint.com/:f:/g/personal/lipeilin_jinjieup_onmicrosoft_com1/EqswOlriNfZLujPiiTm556EBBkCx-WqsnwXcItyyWMkVaQ?e=jMN4MV'">
 </body>
 </html>
